--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "build": "webpack --mode=none",
     "build-dev": "webpack --mode=production",
     "build-production": "webpack --mode=production",
-    "//preinstall": "npx only-allow pnpm",
-    "start": "pnpm start",
-    "update": "pnpm update"
+    "//preinstall": "npx only-allow npm",
+    "start": "npm start",
+    "update": "npm update"
   },
   "keywords": [
     "buddyboss",
@@ -34,13 +34,13 @@
     "@wordpress/babel-plugin-import-jsx-pragma": "1.1.3",
     "@wordpress/babel-preset-default": "3.0.2",
     "babel-eslint": "10.1.0",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.39.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "sass": "^1.62.1",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.48.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "sass": "^1.66.1",
     "sass-loader": "^12.6.0",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
     "wp-pot": "^1.10.2",
     "wp-textdomain": "^1.0.1"
   }
