--- a/package.json
+++ b/package.json
@@ -28,20 +28,13 @@
     "post-anonymously"
   ],
   "devDependencies": {
-    "@babel/cli": "7.12.8",
-    "@babel/core": "7.12.9",
-    "@babel/preset-env": "7.12.7",
-    "@babel/register": "7.12.1",
-    "@wordpress/babel-plugin-import-jsx-pragma": "1.1.3",
-    "@wordpress/babel-preset-default": "3.0.2",
-    "babel-eslint": "10.1.0",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.48.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "sass": "^1.66.1",
-    "sass-loader": "^12.6.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
+    "css-loader": "^6.8.1",
+    "sass-loader": "^13.3.2",
+    "node-sass": "^9.0.0",
+    "style-loader": "^3.3.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "wp-pot": "^1.10.2",
     "wp-textdomain": "^1.0.1"
   }
