--- a/.distignore
+++ b/.distignore
@@ -1,13 +1,22 @@
 /.wordpress-org
+
 /.git
 /.github
-/node_modules
-/src
 
+/node_modules
+
+..gitattributes
 .distignore
 .gitignore
+
+composer.json
+composer.lock
+
 package.json
 package-lock.json
+
 README.md
+
 webpack-config.js
+
 .travis.yml
